src/test/parse-fail/removed-syntax-mut-vec-ty.rs
// compile-flags: -Z parse-only

type v = [mut isize]; //~ ERROR expected type, found keyword `mut`
